# TicTacToe

./: CMakeLists.txt  main.cpp
TicTacToeUI/: FieldWindow.cpp  FieldWindow.h  main.cpp
src/: Field.cpp  Field.h  FieldUI.cpp  Logic.cpp  Logic.h  LogicSlave.cpp  LogicSlave.h
